--- a/FormSettingsMenu.html
+++ b/FormSettingsMenu.html
@@ -22,6 +22,14 @@
     </div>
 
     <div class="block form-group">
+        <label><b>Show Link to Respond Again</b></label>
+        <select id="showLink">
+            <option value="1">Yes</option>
+            <option value="0" selected>No</option>
+        </select>
+    </div>
+
+    <div class="block form-group">
         <label for="confMsg"><b>Form Confirmation Message</b></label>
         <textarea placeholder="Leave empty for google default message" id="confMsg" type="text" rows='3' style="width: 95%;"></textarea>
     </div>
