Added delete all responses option
Added an option to remove all form responses

--- a/AnalyzeFormResultsMenu.html
+++ b/AnalyzeFormResultsMenu.html
@@ -11,7 +11,6 @@
         <p>The following method may damaged your form responses. Read the instructions carefully.</p>
     </div>
     <div>
-        <h3>Remove Duplicate Responses / Remove Unauthorized Responses</h3>
         <h4><a id='removeHelp'>READ BEFORE USE!</a></h4>
         
         <div class="block form-group">
@@ -48,10 +47,13 @@
         </div>        
         <div style="text-align:center;">
             <br>
-            <button class="create" id="removeDupBtn" value="https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif">Remove Duplicate Responses</button>
+            <button class="create" id="delAll" >Delete All Responses</button>
             <br>
             <br>
-            <button class="create" id="removeUnAuthBtn" value="https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif">Remove Unauthorized Responses</button>      
+            <button class="create" id="removeDupBtn" >Remove Duplicate Responses</button>
+            <br>
+            <br>
+            <button class="create" id="removeUnAuthBtn" >Remove Unauthorized Responses</button>
         </div>
     </div> <!-- CLOSE  -->
     <br>
@@ -60,13 +62,12 @@
         <h3>Calc Average</h3>
         <h4><a id='calcAvgHelp'>READ BEFORE USE!</a></h4>
         <div class="block form-group">
-            <label><b>Questions to analyze (sepatated by comma):</b></label>
+            <label><b>Questions to analyze (separated by comma):</b></label>
             <option id='qNumbersHelp' value="https://drive.google.com/uc?id=1R6DiA4jBsLAIqkMLjFSbk7-LbQwKFe1L&export=download" class='secondary'>What is this?</option>
             <input placeholder="1,2,3,4,5..." id="qNumbers" type="text" style="width: 95%;"/>
             <br><br>
         <div style="text-align:center;">
             <button class="create" id="CalcAvgBtn" value="https://mir-s3-cdn-cf.behance.net/project_modules/disp/35771931234507.564a1d2403b3a.gif">Calc Results AVG</button>      
-            <p id="CalcAvgWait"></p>
         </div>
     </div> <!-- CLOSE  -->  
     
