fixing setupOpenInstructions function name

--- a/CreateFormsMenu-js.html
+++ b/CreateFormsMenu-js.html
@@ -2,7 +2,7 @@
 
     document.getElementById('submit').addEventListener("click", createForms);
     
-    setupOpenIstructions('instructions', 'CreateFormsHelp', 'Creating Forms Help');
+    setupOpenInstructions('instructions', 'CreateFormsHelp', 'Creating Forms Help');
     
     setupMessageBox('Form ID Help','formIdHelp', 'On the Url line in your browser', 750, 150, '95%', '95%');
     setupMessageBox('Folder ID Help','folderIdHelp', 'On the Url line in your browser', 750, 150, '95%', '95%');
