--- a/FormSettingsMenu-js.html
+++ b/FormSettingsMenu-js.html
@@ -1,7 +1,7 @@
 <script>
 
     document.getElementById('save').addEventListener("click", saveSettings);
-    setupOpenIstructions('instructions', 'FormSettingsHelp', 'Form Settings Help');
+    setupOpenInstructions('instructions', 'FormSettingsHelp', 'Form Settings Help');
         
     function saveSettings(){
         var data = {};
