--- a/GeneralScript.html
+++ b/GeneralScript.html
@@ -19,7 +19,7 @@
     }  
     
     
-    function setupOpenIstructions(id, htmlFile, title) {
+    function setupOpenInstructions(id, htmlFile, title) {
         var elem = document.getElementById(id);
         elem.addEventListener("click", openInstructions);
         elem.htmlFile = htmlFile;
