--- a/AnalyzeFormResultsHelp.html
+++ b/AnalyzeFormResultsHelp.html
@@ -7,7 +7,7 @@
     
     <h3><u>Remove Duplicate Responses</u></h3>
     <div>
-        <p>Removing duplicate responses based on spcific item.<br>
+        <p>Removing duplicate responses based on specific item.<br>
         For example, if the first item in the form is an email address, this method will remove any other response with the same email address.<br>
         Responses with the same email address on other form will NOT removed.<br></p>
     </div>
@@ -21,7 +21,7 @@
     </div> <!-- CLOSE  -->
     
     <?!= include("Limitations"); ?>
-    <li><b>All questions up to your primary question must be 'requiered'. Normally, it's the first question.</b></li>
+    <li><b>All questions up to your primary question must be 'required'. Normally, it's the first question.</b></li>
     <h3><u>How to Use</u></h3>
     <div>
         <li type="I"><b>On the spreadsheet, select the range where the forms URLs.</b></li>
