--- a/Limitations.html
+++ b/Limitations.html
@@ -10,7 +10,7 @@
         You can check your account limitation <a href="https://developers.google.com/apps-script/guides/services/quotas" target="_blank">here.</a></li>
         <br>
         <li>Google allows functions to run up to 6-30 minutes each time (also depends on your G-Suite plan).<br>
-        <b>Stoping functions by google server may couse lose of data.</b><br>
+        <b>Stopping functions by google server may cause lose of data.</b><br>
         One form creation / analysis take 5-20 seconds, so be careful!</li>
         <br>
     </div> 
