add edit and publish link for each form. Remoce organization

--- a/CreateFormsMenu.html
+++ b/CreateFormsMenu.html
@@ -7,13 +7,13 @@
     <div class="block form-group">
         <label for="formId"><b>Template Form ID</b></label>
         <option id='formIdHelp' value="https://drive.google.com/uc?id=1LuOJWr0T15gGtrmdYdZ_Sq8CtDN7tC9w&export=download" class='secondary'>How to find form ID?</option>
-        <input type="text" id="formId" style="width: 95%;" value='1zy3SH3UBbzGGpmYwgskUiKGBMNP008dNcOdiaX5NeIA'/>
+        <input type="text" id="formId" style="width: 95%;"/>
     </div>
     <br>
     <div class="block form-group">
         <label for="destFolderId"><b>Destination Folder ID</b></label>
         <option id='folderIdHelp' value="https://drive.google.com/uc?id=1YCeLT7Q94qfbW4_bp6IGuJCPDlnFOWTx&export=download" class='secondary'>How to find folder ID?</option>
-        <input type="text" id="destFolderId" style="width: 95%;" value='1k2AavEKeFNVZo1SpmY_iULk_pZj-mN5N'/>
+        <input type="text" id="destFolderId" style="width: 95%;"/>
         
         <br>
         <br>
